syntax = "proto3";
package model;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";


message SundryConfig {
    int64 id = 1 [(gogoproto.jsontag) = "id"];
    int64 team = 2 [(gogoproto.jsontag) = "team"];
    string keyword = 3 [(gogoproto.jsontag) = "keyword"];
    string value = 4 [(gogoproto.jsontag) = "value"];
    string name = 5 [(gogoproto.jsontag) = "name"];
    int64  status = 6 [(gogoproto.jsontag) = "status"];
    string ctime = 7 [(gogoproto.jsontag) = "ctime"];
    string mtime = 8 [(gogoproto.jsontag) = "mtime"];
}

message ServiceModel {
    int64  id = 1 [(gogoproto.jsontag) = "id"];
    string tree_name = 2 [(gogoproto.jsontag) = "tree_name"];
    string tree_path = 3 [(gogoproto.jsontag) = "tree_path"];
    int64  tree_id = 4 [(gogoproto.jsontag) = "tree_id"];
    string service  = 5 [(gogoproto.jsontag) = "service"];
    string keyword = 6 [(gogoproto.jsontag) = "keyword"];
    int64 template = 7 [(gogoproto.jsontag) = "template"];
    string value = 8 [(gogoproto.jsontag) = "value"];
    string name = 9 [(gogoproto.jsontag) = "name"];
    int64  status = 10 [(gogoproto.jsontag) = "status"];
    string ctime = 11 [(gogoproto.jsontag) = "ctime"];
    string mtime = 12 [(gogoproto.jsontag) = "mtime"];
}